--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
               </div>
               <div class="timeline-meta">
                 <div>GCTU</div>
-                <div>Year – Present</div>
+                <div>2025 – Present</div>
               </div>
             </div>
             <div class="timeline-item">
@@ -1106,3 +1106,4 @@
   </script>
 </body>
 </html>
+
