--- a/index.html
+++ b/index.html
@@ -1025,8 +1025,8 @@
             <div class="contact-item">
               <span class="contact-label">GitHub</span>
               <span class="contact-value">
-                <a href="https://ashy9909.github.io" target="_blank" rel="noopener">
-                  ashy9909.github.io
+                <a href="https://jwett356.github.io" target="_blank" rel="noopener">
+                  jwett356.io
                 </a>
               </span>
             </div>
@@ -1106,4 +1106,5 @@
   </script>
 </body>
 </html>
+
 
