--- a/index.html
+++ b/index.html
@@ -1025,8 +1025,8 @@
             <div class="contact-item">
               <span class="contact-label">GitHub</span>
               <span class="contact-value">
-                <a href="https://jwett356.github.io" target="_blank" rel="noopener">
-                  https://github.com/jwett356
+                <a href="https://github.com/jwett356" target="_blank" rel="noopener">
+                  jwett356
                 </a>
               </span>
             </div>
@@ -1106,6 +1106,7 @@
   </script>
 </body>
 </html>
+
 
 
 
