--- a/index.html
+++ b/index.html
@@ -925,9 +925,9 @@
         <h3 class="card-title">What I work with</h3>
         <div class="skills-grid">
           <div class="chip chip--accent">Python</div>
-          <div class="chip chip--accent">Bash Scripting</div>
+          <div class="chip chip--accent">Java-Script</div>
           <div class="chip chip--accent">Linux</div>
-          <div class="chip">Wireshark</div>
+          <div class="chip">C++</div>
           <div class="chip">Nmap</div>
           <div class="chip">Metasploit (basics)</div>
           <div class="chip">Network Security</div>
@@ -1106,6 +1106,7 @@
   </script>
 </body>
 </html>
+
 
 
 
