--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
   </div>
 </article>
       </div>
-      <!-- Project 4: CyberLync Website -->
+      <!-- Project 4: Calc Website -->
         <article class="project-card">
      <div class="project-title">Simple Calculator</div>
      <p class="project-desc">
@@ -1125,3 +1125,4 @@
   </script>
 </body>
 </html>
+
